feat: removed ltp and last close price from watchlist.
